<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context="appl.innov.i_marchand.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:layout_marginTop="20dp"
            android:paddingLeft="28dp"
            android:text="@string/connection_text"
            android:fontFamily="@font/basic"
            android:textSize="@dimen/text_size_28sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <ImageView
            android:layout_width="95dp"
            android:layout_height="80dp"
            android:layout_gravity="left|bottom"
            android:layout_marginTop="50dp"
            android:layout_marginRight="24dp"
            app:srcCompat="@drawable/ipayd" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorWhite">

            <EditText
                android:id="@+id/emailOubTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_user"
                android:drawablePadding="7dp"
                android:maxLength="9"
                android:hint="Login"
                android:inputType="text"
                tools:ignore="TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passworOubTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableEnd="@drawable/ic_key"
                android:drawablePadding="7dp"
                android:hint="Mot de passe"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:textColor="@color/colorWhite"
            android:text="@string/to_connect_text"
            android:background="@drawable/roundedbutton"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_size_12sp"
            android:layout_gravity="center"
            android:src="@drawable/ic_nfc_icon"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_size_4sp"
            android:layout_gravity="center"
            android:fontFamily="@font/basic"
            android:textSize="@dimen/text_size_16sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/nav_header_subtitle"
            />

        <!--        <FrameLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="right"
                    android:paddingTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <at.markushi.ui.CircleButton
                        android:id="@+id/loginBtn"
                        android:layout_width="94dip"
                        android:layout_height="94dip"
                        android:src="@drawable/ic_arrow_forward_black_24dp"
                        app:cb_color="#BFFF9800"
                        app:cb_pressedRingWidth="8dip"
                        />
                </FrameLayout>-->
    </LinearLayout>
</LinearLayout>
