<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:orientation="vertical"
    tools:context="appl.innov.i_marchand.NFCTagActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.NavigationDrawer"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_main" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/round_corners_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_size_8sp"
        android:layout_marginEnd="@dimen/text_size_8sp"
        android:layout_marginTop="@dimen/text_size_8sp"
        android:background="@drawable/round_corners_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">

        <TextView
            android:id="@+id/soldeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_size_16sp"
            android:layout_marginStart="16dp"
            android:background="@drawable/outline_circle_shape"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_size_32sp"
            android:text="@string/fix_amount_text"
            app:layout_constraintBottom_toBottomOf="@+id/soldeId"
            app:layout_constraintStart_toEndOf="@+id/soldeId"
            app:layout_constraintTop_toTopOf="@+id/soldeId" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input_constraint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/text_size_8sp"
        android:layout_marginTop="@dimen/text_size_8sp"
        android:layout_marginEnd="@dimen/text_size_8sp"
        android:background="@drawable/bottom_round_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/round_corners_shape">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_size_32sp"
            android:gravity="center"
            android:text="@string/instruction_text"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_to_pay_text_input_layout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_size_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <EditText
                android:id="@+id/montantApayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_icons8_argent_80"
                android:drawablePadding="7dp"
                android:hint="@string/amount_hint_text"
                android:inputType="number"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>